--- a/.env.example
+++ b/.env.example
@@ -8,6 +8,7 @@ FLASK_APP_KEY="any key works"
 FLASK_APP=src/app.py
 FLASK_ENV=development
 DEBUG=TRUE
+PYTHON_VERSION = 3.11
 
 # Front-End Variables
 BASENAME=/
