--- a/.env.example
+++ b/.env.example
@@ -7,7 +7,7 @@ DATABASE_URL=postgres://gitpod:postgres@localhost:5432/example
 FLASK_APP_KEY="any key works"
 FLASK_APP=src/app.py
 FLASK_ENV=development
-DEBUG=TRUE
+DEBUG=FALSE
 PYTHON_VERSION = 3.11
 
 # Front-End Variables
